public class ValorNegativoException extends Exception {
    public ValorNegativoException(String mensaje) {
        super(mensaje);
    }
}
